--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -5,3 +5,7 @@
     {{ task }}
   </li>
 </ul>
+<hr/>
+<h2>{{ 'Hola'.repeat(4) }}</h2>
+<p>La suma de 3 + 3 es {{ 3 + 3 }}</p>
+<p>Hola soy {{ name }} y mi edad es {{ age }} años</p>
