Event Binding: click y doble click

--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -1,16 +1,23 @@
-<h1>Hola este es mi primer proyecto</h1>
-<h2>{{ welcome }}</h2>
-<ul>
-  <li *ngFor="let task of tasks">
-    {{ task }}
-  </li>
-</ul>
-<hr/>
-<h2>{{ 'Hola'.repeat(4) }}</h2>
-<p>La suma de 3 + 3 es {{ 3 + 3 }}</p>
-<p>Hola soy {{ name }} y mi edad es {{ age }} años</p>
-<hr/>
-<img [src]="person.avatar" alt="">
-<input type="number" [value]="person.age">
-<button [disabled]="disabled">Click me</button>
-<p>person: {{ person.name }}</p>
+<div class="container">
+  <h1>Hola este es mi primer proyecto</h1>
+  <h2>{{ welcome }}</h2>
+  <ul>
+    <li *ngFor="let task of tasks">
+      {{ task }}
+    </li>
+  </ul>
+  <hr/>
+  <h2>{{ 'Hola'.repeat(4) }}</h2>
+  <p>La suma de 3 + 3 es {{ 3 + 3 }}</p>
+  <p>Hola soy {{ name }} y mi edad es {{ age }} años</p>
+  <hr/>
+  <img [src]="person.avatar" alt="">
+  <input type="number" [value]="person.age">
+  <button [disabled]="disabled">Click me</button>
+  <p>person: {{ person.name }}</p>
+  <hr/>
+  <button (click)="clickHandler()">Click me</button>
+  <button (dblclick)="clickHandler()">DoubleClick me</button>
+  <p>(change)</p>
+  <input type="number" [value]="person.age" (change)="changeHandler($event)">
+</div>
