Event binding: keydown

--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -20,4 +20,10 @@
   <button (dblclick)="clickHandler()">DoubleClick me</button>
   <p>(change)</p>
   <input type="number" [value]="person.age" (change)="changeHandler($event)">
+  <p>(change)</p>
+  <input type="text" [value]="person.name" (change)="changeHandler($event)">
+  <p>(keydown)</p>
+  <input type="text" [value]="person.name" (keydown)="keydownHandler($event)">
+  <p>(keydown shift)</p>
+  <input type="text" [value]="person.name" (keydown.shift.t)="clickHandler()">
 </div>
