--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -11,21 +11,21 @@
   <p>La suma de 3 + 3 es {{ 3 + 3 }}</p>
   <p>Hola soy {{ name() }} y mi edad es {{ age }} años</p>
   <hr/>
-  <img [src]="person.avatar" alt="">
-  <input type="number" [value]="person.age">
+  <img [src]="person().avatar" alt="">
+  <input type="number" [value]="person().age">
   <button [disabled]="disabled">Click me</button>
-  <p>person: {{ person.name }}</p>
+  <p>person: {{ person().name }}</p>
   <hr/>
   <button (click)="clickHandler()">Click me</button>
   <button (dblclick)="clickHandler()">DoubleClick me</button>
   <p>(change)</p>
-  <input type="number" [value]="person.age" (change)="changeHandler($event)">
+  <input type="number" [value]="person().age" (change)="changeHandler($event)">
   <p>(change)</p>
-  <input type="text" [value]="person.name" (change)="changeHandler($event)">
+  <input type="text" [value]="person().name" (change)="changeHandler($event)">
   <p>(keydown)</p>
-  <input type="text" [value]="person.name" (keydown)="keydownHandler($event)">
+  <input type="text" [value]="person().name" (keydown)="keydownHandler($event)">
   <p>(keydown shift)</p>
-  <input type="text" [value]="person.name" (keydown.shift.t)="clickHandler()">
+  <input type="text" [value]="person().name" (keydown.shift.t)="clickHandler()">
   <hr/>
   <ul>
     <p>total: {{ tasks().length }}</p>
@@ -37,4 +37,18 @@
   <input type="text" [value]="name()" (change)="changeHandler($event)">
   <p>name: {{ name() }}</p>
   <p>name: {{ name() }}</p>
+  <hr>
+  <div *ngIf="1 !== 1">
+    My content
+  </div>
+  <div *ngIf="name() === 'felipe'">
+    Soy Felipe
+  </div>
+  <input type="number" [value]="person().age" (change)="changeAge($event)">
+  <div *ngIf=" person().name === 'felipe' && person().age > 18; else elseBlock">
+   Soy Felipe y soy mayor de 18
+  </div>
+  <ng-template #elseBlock>
+    Soy Felipe y soy menor de 18
+  </ng-template>
 </div>
