Controlando un input

--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -60,4 +60,8 @@
     <p *ngSwitchCase="'valentina'">Yo soy Valentina</p>
     <p *ngSwitchDefault>Yo no soy esa persona</p>
   </div>
+  <hr>
+  <input type="color" [formControl]="colorCtrl">
+  <p>color: {{ colorCtrl.value }}</p>
 </div>
+
