--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -71,5 +71,13 @@
   <hr>
   <input type="number" [formControl]="widthCtrl">
   <span class="box" [style.width.px]="widthCtrl.value"></span>
+  <hr>
+  <p>
+    <input type="text" [formControl]="nameCtrl"> <br>
+    <span class="message-error" [class.show]="nameCtrl.invalid && nameCtrl.touched">Nombre incorrecto</span>
+  </p>
+  <p>
+    <input type="text">
+  </p>
 </div>
 
