--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -44,6 +44,9 @@
   <div *ngIf="name() === 'felipe'">
     Soy Felipe
   </div>
+  @if (name() === 'felipe') {
+    <div>Soy Felipe</div>
+  }
   <input type="number" [value]="person().age" (change)="changeAge($event)">
   <div *ngIf=" person().name === 'felipe' && person().age > 18; else elseBlock">
    Soy Felipe y soy mayor de 18
@@ -51,6 +54,12 @@
   <ng-template #elseBlock>
     Soy Felipe y soy menor de 18
   </ng-template>
+  <h2>If else new</h2>
+  @if (person().name === 'felipe' && person().age > 18) {
+    <strong>Soy Felipe y soy mayor de 18</strong>
+  } @else {
+    <i>Soy Felipe y soy menor de 18</i>
+  }
   <hr>
   <input type="text" [value]="person().name" (change)="changeName($event)">
   <div [ngSwitch]="person().name">
