Migrando a la nueva sintaxis de Angular v17

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,25 +3,16 @@
     <div class="container">
       <h1>My Day</h1>
       <p>All my tasks in one place</p>
-      <input
-        class="new-todo"
-        placeholder="Type new todo"
-        autofocus
-        type="text"
-        [formControl]="newTaskCtrl"
-        (keydown.enter)="changeHandler()"
-      />
+      <input class="new-todo" placeholder="Type new todo" autofocus type="text" [formControl]="newTaskCtrl"
+        (keydown.enter)="changeHandler()" />
     </div>
   </header>
   <div class="container todoapp-wrapper">
     <!-- This section should be hidden by default and shown when there are todos -->
     <section class="main">
       <ul class="todo-list">
-        <li
-          (dblclick)="updateTaskEditingMode(i)"
-          *ngFor="let task of tasksByFilter(); index as i"
-          [class.editing]="task.editing"
-           [class.completed]="task.completed">
+        @for (task of tasksByFilter(); track task; let i = $index) {
+        <li (dblclick)="updateTaskEditingMode(i)" [class.editing]="task.editing" [class.completed]="task.completed">
           <div class="view">
             <input class="toggle" type="checkbox" [checked]="task.completed" (change)="updateTask(i)" />
             <label>{{ task.title }}</label>
@@ -29,6 +20,7 @@
           </div>
           <input class="edit" (keydown.enter)="updateTaskText(i, $event)" [value]="task.title" />
         </li>
+        }
         <!-- <li class="completed">
           <div class="view">
             <input class="toggle" type="checkbox" checked />
@@ -56,12 +48,16 @@
       </ul>
     </section>
     <!-- This footer should be hidden by default and shown when there are todos -->
-    <footer class="footer" *ngIf="tasksByFilter().length > 0">
+    @if (tasksByFilter().length > 0) {
+    <footer class="footer">
       <!-- This should be `0 items left` by default -->
       <span class="todo-count">
         <strong>{{ tasksByFilter().length }}</strong>
-        <span *ngIf="tasksByFilter().length === 1; else elseBlock"> item</span>
-        <ng-template #elseBlock> items</ng-template>
+        @if (tasksByFilter().length === 1) {
+        <span> item</span>
+        } @else {
+        items
+        }
       </span>
       <!-- Remove this if you don't implement routing -->
       <ul class="filters">
@@ -78,5 +74,6 @@
       <!-- Hidden if no completed items are left ↓ -->
       <button class="clear-completed">Clear completed</button>
     </footer>
+    }
   </div>
 </section>
