--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -2,20 +2,22 @@
   <h1>Hola este es mi primer proyecto</h1>
   <h2>{{ welcome }}</h2>
   <ul>
-    <li *ngFor="let task of tasks()">
+    @for (task of tasks(); track task) {
+    <li>
       {{ task }}
     </li>
+    }
   </ul>
-  <hr/>
+  <hr />
   <h2>{{ 'Hola'.repeat(4) }}</h2>
   <p>La suma de 3 + 3 es {{ 3 + 3 }}</p>
   <p>Hola soy {{ name() }} y mi edad es {{ age }} años</p>
-  <hr/>
+  <hr />
   <img [src]="person().avatar" alt="">
   <input type="number" [value]="person().age">
   <button [disabled]="disabled">Click me</button>
   <p>person: {{ person().name }}</p>
-  <hr/>
+  <hr />
   <button (click)="clickHandler()">Click me</button>
   <button (dblclick)="clickHandler()">DoubleClick me</button>
   <p>(change)</p>
@@ -26,55 +28,68 @@
   <input type="text" [value]="person().name" (keydown)="keydownHandler($event)">
   <p>(keydown shift)</p>
   <input type="text" [value]="person().name" (keydown.shift.t)="clickHandler()">
-  <hr/>
+  <hr />
   <ul>
     <p>total: {{ tasks().length }}</p>
-    <li *ngFor="let task of tasks(); index as i">
-      {{ i }} {{ task }}
-    </li>
+    @for (task of tasks(); track task; let i = $index) {
+    <li>{{ i }} {{ task }}</li>
+    } @empty {
+    <li><strong>La lista esta en vacio</strong></li>
+    }
   </ul>
   <h1>Signals</h1>
   <input type="text" [value]="name()" (change)="changeHandler($event)">
   <p>name: {{ name() }}</p>
   <p>name: {{ name() }}</p>
   <hr>
-  <div *ngIf="1 !== 1">
-    My content
-  </div>
-  <div *ngIf="name() === 'felipe'">
-    Soy Felipe
-  </div>
+  @if (1 !== 1) {
+  <div>My content</div>
+  }
   @if (name() === 'felipe') {
-    <div>Soy Felipe</div>
+  <div>Soy Felipe</div>
+  }
+  @if (name() === 'felipe') {
+  <div>Soy Felipe</div>
   }
   <input type="number" [value]="person().age" (change)="changeAge($event)">
-  <div *ngIf=" person().name === 'felipe' && person().age > 18; else elseBlock">
-   Soy Felipe y soy mayor de 18
-  </div>
-  <ng-template #elseBlock>
-    Soy Felipe y soy menor de 18
-  </ng-template>
+  @if (person().name === 'felipe' && person().age > 18) {
+  <strong>Soy Felipe y soy mayor de 18</strong>
+  } @else {
+  <i>Soy Felipe y soy menor de 18</i>
+  }
   <h2>If else new</h2>
   @if (person().name === 'felipe' && person().age > 18) {
-    <strong>Soy Felipe y soy mayor de 18</strong>
+  <strong>Soy Felipe y soy mayor de 18</strong>
   } @else {
-    <i>Soy Felipe y soy menor de 18</i>
+  <i>Soy Felipe y soy menor de 18</i>
   }
   <hr>
   <input type="text" [value]="person().name" (change)="changeName($event)">
-  <div [ngSwitch]="person().name">
-    <p *ngSwitchCase="'felipe'">Yo soy Felipe</p>
-    <p *ngSwitchCase="'julian'">Yo soy Julian </p>
-    <p *ngSwitchCase="'ana'">Yo soy Ana </p>
-    <p *ngSwitchCase="'valentina'">Yo soy Valentina</p>
-    <p *ngSwitchDefault>Yo no soy esa persona</p>
+  <div>
+    @switch (person().name) {
+    @case ('felipe') {
+    <p>Yo soy Felipe</p>
+    }
+    @case ('julian') {
+    <p>Yo soy Julian</p>
+    }
+    @case ('ana') {
+    <p>Yo soy Ana</p>
+    }
+    @case ('valentina') {
+    <p>Yo soy Valentina</p>
+    }
+    @default {
+    <p>Yo no soy esa persona</p>
+    }
+    }
   </div>
   <hr>
   <input type="color" [formControl]="colorCtrl">
   <p>color: {{ colorCtrl.value }}</p>
   <svg>
     <g>
-      <rect x="0" y="0" height="100" width="100" [attr.fill]="colorCtrl.value"/>
+      <rect x="0" y="0" height="100" width="100" [attr.fill]="colorCtrl.value" />
     </g>
   </svg>
   <hr>
@@ -92,41 +107,57 @@
   <h2>New for</h2>
   <ul>
     <p>total: {{ tasks().length }}</p>
-    <li *ngFor="let task of tasks(); index as i">
-      {{ i }} {{ task }}
-    </li>
+    @for (task of tasks(); track task; let i = $index) {
+    <li>{{ i }} {{ task }}</li>
+    } @empty {
+    <li><strong>La lista esta en vacio</strong></li>
+    }
   </ul>
   <ul>
     @for (task of tasks(); track task; let i = $index) {
-      <li>{{ i }} {{ task }}</li>
+    <li>{{ i }} {{ task }}</li>
     } @empty {
-      <li><strong>La lista esta en vacio</strong></li>
+    <li><strong>La lista esta en vacio</strong></li>
     }
   </ul>
   <hr>
   <h2>New Switch</h2>
-  <div [ngSwitch]="person().name">
-    <p *ngSwitchCase="'felipe'">Yo soy Felipe</p>
-    <p *ngSwitchCase="'julian'">Yo soy Julian </p>
-    <p *ngSwitchCase="'ana'">Yo soy Ana </p>
-    <p *ngSwitchCase="'valentina'">Yo soy Valentina</p>
-    <p *ngSwitchDefault>Yo no soy esa persona</p>
-  </div>
   <div>
-  @switch (person().name) {
+    @switch (person().name) {
     @case ('felipe') {
-      <p>Yo soy Felipe</p>
+    <p>Yo soy Felipe</p>
     }
     @case ('julian') {
-      <p>Yo soy Julian</p>
+    <p>Yo soy Julian</p>
     }
     @case ('ana') {
-      <p>Yo soy Ana</p>
+    <p>Yo soy Ana</p>
+    }
+    @case ('valentina') {
+    <p>Yo soy Valentina</p>
     }
     @default {
-      <p>Yo no soy esa persona</p>
+    <p>Yo no soy esa persona</p>
     }
-  }
+    }
+  </div>
+  <div>
+    @switch (person().name) {
+    @case ('felipe') {
+    <p>Yo soy Felipe</p>
+    }
+    @case ('julian') {
+    <p>Yo soy Julian</p>
+    }
+    @case ('ana') {
+    <p>Yo soy Ana</p>
+    }
+    @case ('valentina') {
+    <p>Yo soy Valentina</p>
+    }
+    @default {
+    <p>Yo no soy esa persona</p>
+    }
+    }
   </div>
 </div>
-
